--- a/my-tsx-app/package.json
+++ b/my-tsx-app/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^11.11.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-toastify": "^10.0.6",
     "uuid": "^11.0.3",
     "yup": "^1.4.0"
   },
